--- a/resources/lang/vi.json
+++ b/resources/lang/vi.json
@@ -28,6 +28,8 @@
   "Url Customize": "Url tùy chọn",
   "contact": "Liên hệ",
   "Contact": "Liên hệ",
+  "Consultancy contact": "Liên hệ tư vấn",
+  "Online contact": "Liên hệ trực tuyến",
   "faq": "Hỏi đáp",
   "newsletter": "Nhận thông báo",
   "advise": "Đăng ký tư vấn",
@@ -300,6 +302,7 @@
   "Submit Order": "Gửi đơn",
   "Warning!": "Cảnh báo!",
   "Product": "Sản phẩm",
+  "Message": "Lời nhắn",
   "Send message": "Gửi tin nhắn",
   "Other department": "Phòng ban khác",
   "Booking this doctor": "Đặt hẹn bác sĩ",
